--- a/src/asset/font/icon-font.scss
+++ b/src/asset/font/icon-font.scss
@@ -1,12 +1,3 @@
-body {
-  margin: 0;
-  background-color: #fff;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 @font-face {
   font-family: 'bet-on-me';
   src:
@@ -21,7 +12,7 @@ body {
 [class^="bet-on-me"], [class*=" bet-on-me"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'bet-on-me' !important;
-  /* speak: never; */
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
